# mianAquant

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml  requirements.txt  test_strategy.json
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  backtest.py  calendar.py  risk.py  stock.py  strategy.py  tasks.py
backend/app/backtest/: __init__.py  analyzer.py  engine.py  executor.py  rules.py
backend/app/models/: __init__.py  backtest.py  base.py  calendar.py  risk.py  stock.py  strategy.py
backend/app/risk/: __init__.py  engine.py  metrics.py  rules.py
backend/app/services/: __init__.py  backtest_service.py  risk_service.py  strategy_service.py
backend/app/strategies/: __init__.py  base.py  template.py
backend/app/strategies/technical/: __init__.py  ma_cross.py  macd_signal.py  rsi_strategy.py
backend/app/tasks/: __init__.py  backtest_tasks.py  celery_app.py
backend/app/workers/: __init__.py  celery_worker.py
docker/: .dockerignore  Dockerfile.backend  docker-compose.yml
docs/: Architecture-quant-system.md  PRD-quant-system.md  class-diagram-data-provider.mermaid  class-diagram-strategy.mermaid  sequence-diagram-backtest.mermaid  sequence-diagram-datasource-switch.mermaid  sequence-diagram.mermaid  task-dependency-graph.mermaid
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: backtestApi.ts  client.ts  stockApi.ts  (+1 more)
scripts/: setup.sh
(+18 files in other folders)
